--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,68 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Toolbar with SearchView -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarhome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFC107"
-        app:title="Trang chính"
-        app:titleTextColor="@android:color/white">
-
-    </androidx.appcompat.widget.Toolbar>
-
-    <!-- Slider -->
-    <ViewFlipper
-        android:id="@+id/viewFlipper"
-        android:layout_below="@id/toolbarhome"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:autoStart="true"
-        android:flipInterval="3000">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/banner1" /> <!-- Replace with festive banner -->
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/banner2"
-            android:scaleType="centerCrop" /> <!-- Replace with festive banner -->
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/banner3"
-            android:scaleType="centerCrop" /> <!-- Replace with festive banner -->
-    </ViewFlipper>
-
-    <!-- Content (Fragment Container) -->
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_below="@id/viewFlipper"
         android:layout_above="@id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:text="Sản phẩm mới nhất"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="10dp"/>
-    </FrameLayout>
+        android:layout_height="match_parent" />
 
     <!-- Bottom Navigation -->
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -72,25 +18,14 @@
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_nav_menu" />
 
-    <!-- Chat button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
         android:src="@drawable/ic_chat"
-        app:fabSize="normal"
         app:backgroundTint="#FFC107" />
 
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:iconifiedByDefault="false"
-        android:queryHint="Tìm kiếm..."
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white" />
 </RelativeLayout>
