--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -10,31 +10,10 @@
         >
 
         <!-- Header: logo + search -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@color/grey"
-            android:gravity="center_vertical">
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/logo" />
-
-            <SearchView
-                android:id="@+id/searchView"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/search_background"
-                android:iconifiedByDefault="false"
-                android:queryHint="Tìm kiếm..." />
-        </LinearLayout>
 
         <!-- Banner -->
+
         <ViewFlipper
             android:id="@+id/viewFlipper"
             android:layout_width="match_parent"
@@ -45,6 +24,16 @@
 
             <ImageView
                 android:src="@drawable/banner2"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="fitXY" />
+            <ImageView
+                android:src="@drawable/banner1"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="fitXY" />
+            <ImageView
+                android:src="@drawable/banner3"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="fitXY" />
