--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,6 @@
     <color name="teal_700">#FF018786</color>
 
     <color name="grey">#333446</color>
+    <color name="red">#FF0000</color>
 
 </resources>
