--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -16,5 +16,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="501dp" />
+    <com.google.android.material.button.MaterialButton style="@style/Widget.EStore.Button.Primary"
+        android:id="@+id/btn_custom"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:text="Order"
+        android:layout_margin="@dimen/padding_medium"
+        android:background="@color/grey"
+        xmlns:android="http://schemas.android.com/apk/res/android" />
 </LinearLayout>
