--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,14 +28,15 @@
 
             <SearchView
                 android:id="@+id/searchView"
-                android:layout_width="220dp"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_margin="8dp"
                 android:layout_weight="1"
+                android:layout_marginStart="8dp"
                 android:background="@drawable/search_background"
                 android:iconifiedByDefault="false"
                 android:queryHint="Tìm kiếm..." />
         </LinearLayout>
+
     </androidx.appcompat.widget.Toolbar>
     <!-- Fragment container nên nằm DƯỚI toolbar -->
 
@@ -56,7 +57,9 @@
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_nav_menu" />
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+
+
+    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
 <!--        android:id="@+id/fab_chat"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
